k8s/infrastructure/gateway-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      containers:
        - name: gateway-server
          image: comturkcellcrm-microservices-hw4-gateway-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
