k8s/infrastructure/gateway-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
  namespace: microservices
spec:
  selector:
    app: gateway-server
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
